--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Theme URI: https://fancythemes.com/themes/nuria/
 Author: FancyThemes
 Author URI: https://fancythemes.com/
 Description: Nuria is a clean WordPress theme for blogging, it can be for personal, travel, food or any other blog. Designed by focusing on readability. Developed following modern web technology and trends and follow the Web Standard, such as CSS flexbox, SVG for icons and graphics.
-Version: 1.0.4
+Version: 1.0.5
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Tags: custom-background, custom-colors, custom-header, custom-menu, editor-style, featured-images, flexible-header, post-formats, rtl-language-support, sticky-post, threaded-comments, translation-ready, blog
@@ -3641,7 +3641,7 @@ p > video {
 	}
 
 	.author-avatar .avatar {
-		width: 120px;
+		width: 100px;
 		height: auto;
 	}
 
@@ -4173,6 +4173,12 @@ p > video {
 
 	.page-header {
 		padding: 40px;
+		position: relative;
+	}
+
+	.page-header .author-avatar {
+		left: auto;
+		right: 40px;
 	}
 	
 	.entry-header,
